--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container-fluid px-4">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <div class="brand-icon me-2">
-                    <i class="bi bi-geo-alt-fill"></i>
+                    <img src="assets/images/logo.jpg" alt="Ruf Bac Tour Services" class="brand-logo-img">
                 </div>
                 <div>
                     <span class="brand-text">Ruf Bac</span>
